--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
     <p>关于canvas和svg平面绘图性能的调研</p>
     <div class="main"></div>
-    <svg class="grandson" id='svg${num}'></svg>
+    <svg class="grandson" id='svg${num}'>
+        <!--<circle cx="0" cy="0" r="20" stroke="red" stroke-width="1" fill="transparent">-->
+            <!--<animateMotion path="M150,20 L280,75 L150,130 L20,75 L150,20" begin="0s" dur="3s" repeatCount="indefinite"/>-->
+        <!--</circle>-->
+        <!--<path d="M150,20 L280,75 L150,130 L20,75 L150,20" stroke="blue" stroke-width="2" fill="none" />-->
+    </svg>
     <!--<button id="animationButton">animationButton</button>-->
     <!--<canvas id="canvas"></canvas>-->
 
@@ -19,6 +24,7 @@
 <script src="./insert.js"></script>
 <script src="./vs.js"></script>
 <script src="./frame.js"></script>
+<script src="./path.js"></script>
 
 </body>
 </html>
