index.html —> 引用 lib

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     let e = (sel) => document.querySelector(sel)
     let log = (...arg) => console.log(...arg)
 </script>
-<script src="./insert.js"></script>
-<script src="./vs.js"></script>
-<script src="./frame.js"></script>
-<script src="./path.js"></script>
+<script src="./lib/insert.js"></script>
+<script src="./lib/vs.js"></script>
+<script src="./lib/frame.js"></script>
+<script src="./lib/path.js"></script>
 
 </body>
 </html>
