--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>canvas_vs_svg</title>
-    <link rel="stylesheet" href="./vs.css">
+    <link rel="stylesheet" href="./src/vs.css">
 </head>
 <body>
     <p>关于canvas和svg平面绘图性能的调研</p>
