--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
     <!--<button id="animationButton">animationButton</button>-->
     <!--<canvas id="canvas"></canvas>-->
 
-<script src="node_modules/babel-core/browser.js"></script>
-
-<script type="text/babel">
+<script>
     let e = (sel) => document.querySelector(sel)
     let log = (...arg) => console.log(...arg)
 </script>
-<script type="text/babel" src="./lib/insert.js"></script>
-<script type="text/babel" src="./lib/vs.js"></script>
-<script type="text/babel" src="./lib/frame.js"></script>
-<script type="text/babel" src="./lib/path.js"></script>
+    <!--<script src="./lib/insert.js"></script>-->
+    <!--<script src="./lib/vs.js"></script>-->
+    <!--<script src="./lib/frame.js"></script>-->
+    <!--<script src="./lib/path.js"></script>-->
+
+    <script src="./src/insert.js"></script>
+    <script src="./src/vs.js"></script>
+    <script src="./src/frame.js"></script>
+    <script src="./src/path.js"></script>
 
 </body>
 </html>
